# gait

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  docker-compose.yml  gait.service  pyproject.toml  trave.service
config/: llama-models.ini
examples/: audio_pipeline.py  chat.html
gateway/: .dockerignore  .gitignore  Dockerfile  README.md  config.py  deps.py  formatting.py  main.py  pyproject.toml
gateway/models/: __init__.py  audio.py  chat.py  common.py  completions.py  embeddings.py  responses.py
gateway/providers/: __init__.py  base.py  chatterbox.py  llamacpp.py  protocols.py  voice.py  whisperx.py
gateway/routes/: completions.py  embeddings.py  health.py  models.py  responses.py
gateway/routes/audio/: __init__.py  speech.py  transcriptions.py  translations.py  voices.py
gateway/routes/chat/: __init__.py  completions.py
gateway/src/gateway_service/: deps.py  main.py  models.py  text_preprocessing.py
gateway/src/gateway_service/models/: __init__.py  audio.py  chat.py  common.py  completions.py  embeddings.py  responses.py
gateway/src/gateway_service/providers/: __init__.py  base.py  chatterbox.py  llamacpp.py  protocols.py  transport.py  voice.py  whisperx.py
gateway/src/gateway_service/routes/: completions.py  embeddings.py  health.py  models.py  responses.py
gateway/src/gateway_service/routes/audio/: speech.py  transcriptions.py  translations.py  voices.py
gateway/src/gateway_service/routes/chat/: completions.py
gateway/tests/: test_api.py
libs/trave-common/: pyproject.toml
libs/trave-common/src/trave_common/: __init__.py  schemas.py
scripts/: check-idle-sync.sh  clean-voice  download-gandalf
services/chatterbox/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/chatterbox/chatterbox_service/: app.py  config.py  engine.py  schemas.py
services/chatterbox/src/chatterbox_service/: app.py  audio.py  config.py  engine.py  main.py  models.py
services/chatterbox/src/chatterbox_service/routes/: health.py  models.py  speech.py
services/chatterbox/tests/: test_api.py
services/chatterbox/voices/: .gitkeep
services/gateway/: Dockerfile  README.md  pyproject.toml
services/gateway/src/gateway_service/: config.py  formatting.py  main.py  models.py  proxy.py
services/gateway/src/gateway_service/backends/: __init__.py  base.py  chatterbox.py  llamacpp.py  voice.py  whisperx.py
services/gateway/src/gateway_service/clients/: __init__.py  base.py  chat.py  chatterbox.py  llamacpp.py  protocols.py  speech.py  transcription.py  voice.py  whisperx.py
services/gateway/src/gateway_service/routes/: audio.py  completions.py  embeddings.py  health.py  models.py  responses.py
services/gateway/src/gateway_service/routes/audio/: __init__.py  speech.py  transcriptions.py  translations.py  voices.py
services/gateway/src/gateway_service/routes/chat/: __init__.py  completions.py
services/gateway/tests/: test_api.py
services/llamacpp/: Dockerfile  README.md  source.Dockerfile
services/voice/: .gitignore  Dockerfile  README.md  pyproject.toml
services/voice/src/voice_service/: app.py  config.py
services/voice/tests/: test_api.py
services/whisperx/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
services/whisperx/src/whisperx_service/: app.py  config.py  engine.py  main.py  models.py
services/whisperx/src/whisperx_service/routes/: health.py  models.py  transcriptions.py  translations.py
services/whisperx/tests/: test_api.py
services/whisperx/whisperx_service/: app.py  config.py  engine.py  idle.py  schemas.py
tests/: test_api.py  test_integration.py  test_response_stream.py
tests/integration/: pyproject.toml  test_integration.py
tests/integration/test_outputs/: chat_audio_parsed.json  chat_audio_stream.txt  chat_completion.json  chat_multi_turn.json  chat_stream_chunks.json  chat_system_msg.json  completion.json  completion_stream_chunks.json  completion_stream_text.txt  embedding_batch.json  embedding_single.json  health.json  models.json  response_non_streaming.json  response_streaming.txt  response_streaming_events.json  response_with_instructions.json  roundtrip_stt.json  transcription.srt  transcription.vtt  transcription_verbose.json  transcription_with_lang.json  translation.srt  translation_json.json  translation_verbose.json  voice_created.json  voice_default.json  voice_deleted.json  voices_list_after_create.json  voices_list_initial.json
