[project]
name = "voice-service"
version = "0.1.0"
description = "Minimal voice reference clip management service"
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.45",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "pytest>=8",
    "httpx>=0.28",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_service"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "B008",  # function calls in defaults
]

[tool.ruff.lint.isort]
known-first-party = ["voice_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
