[project]
name = "whisperx-service"
version = "0.2.0"
description = "WhisperX STT backend service (Starlette RPC)"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.45",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.9",
    "whisperx>=3.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "pytest>=8",
    "httpx>=0.28",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["whisperx_service"]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["."]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["whisperx_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# torchcodec (transitive dep of pyannote-audio >=4) must match the torch
# major version.  whisperx pins torch~=2.8.0, so we need torchcodec 0.6.x
# or 0.7.x (the two releases built for torch 2.8).  Without this cap uv
# resolves to the latest torchcodec which targets a newer torch ABI.
# See https://github.com/pytorch/torchcodec#installing-torchcodec
[tool.uv]
override-dependencies = [
    "torchcodec>=0.6.0,<0.8.0",
]

# WhisperX requires PyTorch with CUDA -- use uv index overrides for the
# correct wheel index.
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch", marker = "sys_platform != 'darwin'" },
]
torchaudio = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch", marker = "sys_platform != 'darwin'" },
]
triton = [
    { index = "pytorch", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
